k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels: 
        app: frontend
    spec:
      containers:
        - name: frontend
          image: alija10/expenses_track_frontend:latest       
          ports:
          - containerPort: 5173
          volumeMounts:
            - name: frontend-config-volume
              mountPath: /app/src/config.ts
              subPath: config.ts
            - name: frontend-config-volume
              mountPath: /app/vite.config.ts
              subPath: vite.config.ts
            - name: frontend-config-volume
              mountPath: /app/.env
              subPath: .env                   
      volumes:
        - name: frontend-config-volume
          configMap:
            name: frontend-config
