k8s/postgresdb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: exp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels: 
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.1-alpine
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data


        # envFrom:
        #   - secretRef:
        #       name: secrets
        #   - configMapRef:
        #       name: configmap
        # volumeMounts:
        #   - name: postgres-data
        #     mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
